# framework

./: .gitignore  CMakeLists.txt  INSTALL.local  LICENSE.LGPL  NEWS  README  README.md  RELEASENOTES  VERSION  config.pri  defines-legacy.pri  defines.pri  dui-im-framework.schemas  m-im-framework.pro  m-im-framework.schemas  maliit-framework.pro  maliit-plugin-sdk-dist.sh  mconfig.pri  meego-im-framework.pro  meego-im-framework.schemas.in  switch-maliit-plugin.sh
cmake/: FindGIO.cmake  FindGLib2.cmake  FindGtk3.cmake  FindQtWaylandScanner.cmake  FindWaylandProtocols.cmake  FindWaylandScanner.cmake
common/: .gitignore  common.pro  libmaliit-common.pri  maliit-framework-0.80.pc.in  maliit-framework.pc.in  maliit-framework.prf.in  minputmethodnamespace.h
connection/: .gitignore  README.weston  connection.pro  connectionfactory.cpp  connectionfactory.h  dbuscustomarguments.cpp  dbuscustomarguments.h  dbusinputcontextconnection.cpp  dbusinputcontextconnection.h  dbusserverconnection.cpp  dbusserverconnection.h  glibdbusimserverproxy.cpp  glibdbusimserverproxy.h  glibdbusimserverproxy_p.h  inputcontextdbusaddress.cpp  inputcontextdbusaddress.h  libmaliit-connection.pri  maliit-connection-0.80.pc.in  maliit-connection.pc.in  mdbusglibinputcontextadaptor.cpp  mdbusglibinputcontextadaptor.h  mimdirectserverconnection.cpp  mimdirectserverconnection.h  miminputcontextdirectconnection.cpp  miminputcontextdirectconnection.h  mimserverconnection.cpp  mimserverconnection.h  minputcontextconnection.cpp  minputcontextconnection.h  minputcontextglibdbusconnection.cpp  minputcontextglibdbusconnection.h  minputcontextwestonimprotocolconnection.cpp  minputcontextwestonimprotocolconnection.h  minputmethodcontext1interface.xml  org.maliit.server.service.in  serverdbusaddress.cpp  serverdbusaddress.h  text.xml  variantmarshalling.cpp  variantmarshalling.h  (+2 more)
connection-glib/: .gitignore  connection-glib.pro  debug.c  debug.h  libmaliit-connection-glib.pri  maliitmarshalers.list  meego-im-connector-private.h  meego-im-connector.c  meego-im-connector.h  meego-im-proxy.c  meego-im-proxy.h  meego-imcontext-dbus-private.h  meego-imcontext-dbus.c  meego-imcontext-dbus.h
dbus_interfaces/: dbus_interfaces.pri  dbus_interfaces.pro  minputmethodcontext1interface.xml  minputmethodserver1interface.xml
debian/: .gitignore  api  changelog  control  copyright  dui-im-context.install  dui-im-framework-tests.install  dui-im-uiserver.install  libduiimframework-dev.install  libduiimframework0.install  libmeegoimframework-dev.install.in  libmeegoimframework0.install  libmeegoimquick-dev.install.in  libmeegoimquick0.install  libmimframework-dev.install.in  libmimframework0.install  m-im-context.install.in  m-im-framework-tests.install  meego-im-framework-tests.install  meego-im-settings-applet.install  meego-im-uiserver.aegis  meego-im-uiserver.install.in  meego-im-uiserver.postinst  rules
demos/: .gitignore  demos.pro
doc/: .gitignore  Doxyfile.in  aliases.sed  doc.pri  doc.pro  dui.css  duidoxy.cfg  duidoxy.cfg.in  footer.html  header.html  maliit-fw-components.odg  mdoxy.cfg  mdoxy.cfg.in  tr.sed  versionString.sh  xmlize.pl
examples/: README  examples.pro
gtk-input-context/: .gitignore  AUTHORS  Makefile.am  README  autogen.sh  configure.ac  gtk-input-context.pro
gtk-input-context/client-gtk/: Makefile.am  client-gtk.pro  client-imcontext-gtk.c  client-imcontext-gtk.h  dui-imcontext.c  dui-imcontext.h  gtk-imcontext-plugin.c  qt-gtk-translate.cpp  qt-gtk-translate.h
gtk-input-context/client-gtk3/: Makefile.am  client-gtk3.pro
gtk-input-context/src/: .gitignore  Makefile.am  debug.c  debug.h  dui-im-client.xml  dui-im-proxy.c  dui-im-proxy.h  dui-imcontext-dbus.c  dui-imcontext-dbus.h  dui-imcontext-dbus.xml  dui-imcontext.c  dui-imcontext.h  gtk-imcontext-plugin.c  maliitmarshalers.list  meego-im-client.xml  meego-im-connector.c  meego-im-connector.h  meego-im-proxy.c  meego-im-proxy.h  meego-imcontext-dbus.c  meego-imcontext-dbus.h  meego-imcontext-dbus.xml  qt-gtk-translate.cpp  qt-gtk-translate.h  qt-keysym-map.cpp  qt-keysym-map.h  src.pro
input-context/: .gitignore  duiinputcontext.cpp  duiinputcontext.h  duiinputcontextadaptor.cpp  duiinputcontextadaptor.h  duiinputcontextplugin.cpp  duiinputmethodcontext1service.xml  duipreeditstyle.h  glibdbusimserverproxy.cpp  glibdbusimserverproxy.h  input-context.pri  input-context.pro  inputcontextdbusaddress.cpp  inputcontextdbusaddress.h  libmaliit-inputcontext-qt4.pri  main.cpp  mdbusglibicconnectionserviceglue.h  mdbusglibinputcontextadaptor.cpp  mdbusglibinputcontextadaptor.h  mimserverconnection.cpp  mimserverconnection.h  minputcontext.cpp  minputcontext.h  minputcontextadaptor.cpp  minputcontextadaptor.h  minputcontextplugin.cpp  minputcontextplugin.h  minputmethodcontext1interface.xml  mpreeditstyle.h  qtdbusimserverproxy.cpp  qtdbusimserverproxy.h
input-method-quick/: .gitignore  input-method-quick.pro  maliit-plugins-quick-0.20.pc.in  maliitquick.h  meegoimquick.prf.in  minputmethodquick.cpp  minputmethodquick.h  minputmethodquickplugin.cpp  minputmethodquickplugin.h  mkeyoverridequick.cpp  mkeyoverridequick.h  mkeyoverridequick_p.h
maliit-glib/: .gitignore  MaliitGLibConfig.cmake.in  libmaliit-glib.pri  maliit-docs.xml  maliit-glib-1.0.pc.in  maliit-glib-docs.pro  maliit-glib.pc.in  maliit-glib.pro  maliit-sections.txt  maliitattributeextension.c  maliitattributeextension.h  maliitattributeextensionprivate.h  maliitattributeextensionregistry.c  maliitattributeextensionregistry.h  maliitbus.c  maliitbus.h  maliitbusprivate.h  maliitinputmethod.c  maliitinputmethod.h  maliitmarshallers.list  maliitpluginsettings.c  maliitpluginsettings.h  maliitpluginsettingsprivate.h  maliitsettingdata.c  maliitsettingdata.h  maliitsettingsentry.c  maliitsettingsentry.h  maliitsettingsentryprivate.h  maliitsettingsmanager.c  maliitsettingsmanager.h
maliit-plugins-quick/: libmaliit-plugins-quick.pri  maliit-plugins-quick.pro
maliit-settings/: .gitignore  libmaliit-settings.pri  maliit-settings-1.0.pc.in  maliit-settings.pc.in  maliit-settings.pro  (+6 more)
(+795 files in other folders)
